[package]
name = "pgnparse"
version = "0.1.0"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"

[dependencies]
shakmaty = "0.17.1"
pgn-reader = "0.16.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[[bin]]
name = "pgnparse"
path = "src/pgnparse.rs"

[lib]
