[package]
name = "pgnparse"
version = "0.1.8"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["pgn", "parse", "rust", "json"]
description = "Parse PGN to Rust struct ( headers as hash map, main line moves as san, uci, fen, epd records ) or to JSON. All lichess variants are supported. Custom starting position using FEN header is supported."
license = "MIT"
repository = "https://github.com/hyperchessbot/pgnparse"
homepage = "https://github.com/hyperchessbot/pgnparse#pgnparse"
documentation = "https://docs.rs/pgnparse/0.1.8"
readme = "ReadMe.md"

[dependencies]
shakmaty = "0.17.1"
pgn-reader = "0.16.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[[bin]]
name = "pgnparse"
path = "src/pgnparse.rs"

[lib]
